objects/Community_Async_Job_Setting__mdt.object
<CustomObject>
    <description>Stored parameter and email recipients for community async jobs</description>
    <fields>
        <fullName>API_Setting_Dev_Name__c</fullName>
        <label>API Setting Dev Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Batch_Size__c</fullName>
        <defaultValue>200</defaultValue>
        <description>The jobs batch size (if applicable)</description>
        <inlineHelpText>The jobs batch size (if applicable)</inlineHelpText>
        <label>Batch Size</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Job_Name__c</fullName>
        <description>The scheduled job name.</description>
        <inlineHelpText>The scheduled job name.</inlineHelpText>
        <label>Job Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Job_Results_Email_Addresses__c</fullName>
        <defaultValue>&quot;rick@chicagosalesforceconsulting.com&quot;</defaultValue>
        <description>Comma delim</description>
        <inlineHelpText>Comma delim</inlineHelpText>
        <label>Job Results Email Addresses</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Months_Back__c</fullName>
        <description>The amount of months to go back. (This is open ended based on the client needs )</description>
        <inlineHelpText>The amount of months to go back. (This is open ended based on the client needs )</inlineHelpText>
        <label>Months Back</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Scope_Record_Type_Dev_Names__c</fullName>
        <description>The developer name of the record type to use for the scope (start method or main queueable query)</description>
        <inlineHelpText>The developer name of the record type to use for the scope (start method or main queueable query)</inlineHelpText>
        <label>Scope Record Type Dev Names</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <label>Community Async Job Setting</label>
    <pluralLabel>Community Async Job Settings</pluralLabel>
</CustomObject>